minor style fix for comment alignment

--- a/app/assets/stylesheets/issues.css.scss
+++ b/app/assets/stylesheets/issues.css.scss
@@ -394,6 +394,8 @@
 
 #comments-list {
   list-style: none;
+  margin: 1em auto;
+  padding: 0;
   width: 90%;
   overflow: hidden;
   font-family: "Open Sans", sans-serif;
